# chess-like-rs

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
src/: main.rs  models.rs
static/: style.css
static/js/common/: Board.js  Game.js  Move.js  Piece.js  PieceInfo.js  Tile.js  Vector2.js
static/js/special/: Brandubh.js  Chess.js  CompoundChess.js  Hexapawn.js  Latrunculi.js  Tablut.js  Tawlbwrdd.js  Template.js
templates/: game.html  home.html
