[package]
name = "chess-like-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
dotenv = "0.15.0"
futures = "0.3.25"
mongodb = "2.3.1"
serde = "1.0.152"
serde_json = "1.0.91"
tera = "1.17.1"
walkdir = "2.3.2"
